[project]
name = "znsocket"
version = "0.2.11"
description = "Python implementation of a Redis-compatible API using websockets."
authors = [
    { name = "Fabian Zills", email = "fzills@icp.uni-stuttgart.de" },
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "eventlet>=0.39.0",
    "python-socketio[client]>=5.12.1",
    "redis>=5.2.1",
    "typer>=0.13",
    "znjson>=0.2.6",
]

[dependency-groups]
dev = [
    "coverage>=7.6.10",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "numpy>=2.2.2",
    "pytest>=8.3.4",
    "pytest-benchmark>=5.1.0",
    "rdkit2ase>=0.1.4",
    "zndraw>=0.5.10",
    "znh5md>=0.4.4",
]
docs = [
    "furo>=2024.8.6",
    "nbsphinx>=0.9.7",
    "sphinx>=8.1.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-js>=5.0.0",
]

[project.scripts]
znsocket = "znsocket.cli:app"

[project.urls]
Repository = "https://github.com/zincware/ZnSocket"
Releases = "https://github.com/zincware/ZnSocket/releases"

[tool.ruff.lint]
select = ["I", "F", "W", "C"]

[tool.coverage.run]
# omit the tests themselves
omit = ["*/tests/*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
  "/js",
]
